traces/bug_769.txt
src/Graphics/ffglut.cpp:1527: error: DEAD_STORE
  The value written to &cxy (type double) is never used.
Showing all 1 steps of the trace


src/Graphics/ffglut.cpp:1527:5: Write of unused value
1525.       oBmax=B;
1526.       
1527.       double cxy =  D.y*width/ (D.x*height);
            ^
1528.       
1529.       if ( D.y*width < D.x*height)  
